Moved settings dir outside of app dir

--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.6
 
 ENV PYTHONUNBUFFERED 1
 
-ENV DJANGO_SETTINGS_MODULE=turbosmarthome.settings.local
+ENV DJANGO_SETTINGS_MODULE=settings.local
 ENV DJANGO_SECRET_KEY=8@or@bb!%9s_&mumqdz*rhg5+7!^88d97um55wpu%5fqpxnga)
-ENV DJANGO_ACCOUNT_ALLOW_REGISTRATION=False
+ENV DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
 
 RUN mkdir /app
 
