Config changes for it to work on production

--- a/deploy/production/uwsgi.ini
+++ b/deploy/production/uwsgi.ini
@@ -1,14 +1,12 @@
 [uwsgi]
 chdir=/var/www/turbosmarthome
 wsgi-file=/var/www/turbosmarthome/config/wsgi.py
-home=/var/www/turbosmarthome/.virtualenvs/turbosmarthome
-callable=app
-master=true
+home=/home/uli/.virtualenvs/turbosmarthome
 vacuum=True
 max-requests=5000
 processes=10
 socket=/tmp/turbosmarthome.sock
 chmod-socket=666
 daemonize=/var/www/turbosmarthome/logs/uwsgi.log
-virtualenv = /var/www/turbosmarthome/.virtualenvs/turbosmarthome
+virtualenv=/home/uli/.virtualenvs/turbosmarthome
 buffer-size=32768
